# helix

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  SPDX.spdx  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml  2-feature-request.yaml  3-question.yaml
.github/workflows/: commit-check.yml  commit.yml  pipeline.yml  pull-request.yml  release.yml  tag.yml
docs/: conf.py  extensions.rst  index.rst
docs/about/: disclaimer.rst  index.rst
docs/reference/: blueprints.rst  cli.rst  components.rst  dependencies.rst  index.rst  testing.rst  transforms.rst  utilities.rst
docs/tutorial/: developing-a-blueprint.rst  further-reading.rst  helix-at-a-glance.rst  index.rst  quick-install-guide.rst  using-the-helix-cli.rst  writing-your-first-component.rst  writing-your-first-transform.rst
docs/usage/: building.rst  dataset-generation.rst  index.rst  testing.rst  using-the-python-api.rst
example/: CMakeLists.txt  main.cpp
examples/: attack-reverse.sh  attack.sh  example.json  example.py  example.sh
examples/helix-example/: MANIFEST.in  setup.py
helix/: __init__.py  __main__.py  blueprint.py  build.py  component.py  exceptions.py  tests.py  transform.py  utils.py
helix/blueprints/cmake/: CMakeLists.txt  cmake.py  main.c
helix/blueprints/cmake/static/: CMakeLists.txt  static.py
helix/components/attack/: utils.py
helix/components/fibonacci/: fibonacci.c  fibonacci.py
helix/management/: __init__.py  exceptions.py  utils.py
helix/management/commands/: build.py  (+7 more)
(+47 files in other folders)
